# subs_down_n_sync

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.en.md  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  exceptions.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  subs_down_n_sync.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-19-subs_down_n_sync.en.md  2026-04-19-subs_down_n_sync.md  2026-04-22-github-pipeline.en.md  2026-04-22-github-pipeline.md  2026-04-22-project-restructure.en.md  2026-04-22-project-restructure.md
docs/superpowers/specs/: 2026-04-19-subs-down-n-sync-design.md  2026-04-19-subs_down_n_sync-design.en.md  2026-04-19-subs_down_n_sync-design.md  2026-04-22-github-pipeline-design.en.md  2026-04-22-github-pipeline-design.md  2026-04-22-project-restructure-design.md
scripts/: smoke_test.py
src/subs_down_n_sync/: __init__.py  __main__.py  _srt_utils.py  audio_sync.py  cli.py  core.py  credentials.py  exceptions.py  matcher.py
src/subs_down_n_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audio_sync.py  test_core.py  test_credentials.py  test_integration.py  test_matcher.py  test_subs_down_n_sync.py
tests/fixtures/: mini.srt
