[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subs-down-n-sync"
version = "1.1.3"
description = "CLI to download and sync subtitles for video files using semantic embeddings + DTW"
requires-python = ">=3.9"
authors = [{name = "Airton Soares", email = "airtonnsoares@gmail.com"}]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["subtitles", "subtitle-sync", "opensubtitles", "nlp", "cli", "video", "sentence-transformers", "dtw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
]
dependencies = [
    "subliminal>=2.2",
    "sentence-transformers>=3.0",
    "scipy>=1.13",
    "setuptools<81",
    "rich>=13",
    "charset-normalizer>=3.0",
]

[project.scripts]
subs-down-n-sync = "subs_down_n_sync.cli:main"

[project.urls]
Homepage = "https://pypi.org/project/subs-down-n-sync/"
Repository = "https://github.com/airton-soares/subs_down_n_sync"
"Bug Tracker" = "https://github.com/airton-soares/subs_down_n_sync/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["integration: testes que dependem de ffmpeg, stable-ts e rede"]
addopts = "-m 'not integration' --cov=src/subs_down_n_sync --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src/subs_down_n_sync"]

[tool.coverage.report]
fail_under = 90

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/subs_down_n_sync/__init__.py:__version__"]
branch = "main"
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"
